Fixing a few issues with the supported language swagger schema #80
