# api/swagger/swagger.yaml
@@ -667,9 +667,7 @@ paths:
         "200":
           description: Success
           schema:
-            type: array
-            items:
-              "$ref": "#/definitions/Language"
+            $ref: "#/definitions/SupportedLanguagesResponse"
         "404":
           description: Not Found
           schema:
@@ -895,6 +893,14 @@ definitions:
     properties:
       code:
         type: string
+  SupportedLanguagesResponse:
+    required:
+      - supportedLanguages
+    properties:
+      supportedLanguages:
+        type: array
+        items:
+          "$ref": "#/definitions/Language"
   RestaurantTranslations:
     type: object
     properties:
